updated colors to match with dark / light theme

--- a/Cyberduck/Cyberduck/App.xaml
+++ b/Cyberduck/Cyberduck/App.xaml
@@ -9,6 +9,18 @@
                 <ResourceDictionary Source="/Styles/FontSizes.xaml" />
                 <ResourceDictionary Source="/Styles/Thickness.xaml" />
                 <ResourceDictionary Source="/Styles/TextBlock.xaml" />
+                <ResourceDictionary>
+                    <ResourceDictionary.ThemeDictionaries>
+                        <ResourceDictionary x:Key="Light">
+                            <SolidColorBrush x:Key="SubTitleColor" Color="Gray" />
+                            <SolidColorBrush x:Key="BorderColor" Color="LightGray" />
+                        </ResourceDictionary>
+                        <ResourceDictionary x:Key="Dark">
+                            <SolidColorBrush x:Key="SubTitleColor" Color="LightGray" />
+                            <SolidColorBrush x:Key="BorderColor" Color="Gray" />
+                        </ResourceDictionary>
+                    </ResourceDictionary.ThemeDictionaries>
+                </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
