--- a/Cyberduck/Cyberduck/Views/BookmarksPage/BookmarksPage.xaml
+++ b/Cyberduck/Cyberduck/Views/BookmarksPage/BookmarksPage.xaml
@@ -40,10 +40,10 @@
                 <ColumnDefinition Width="168" />
                 <ColumnDefinition Width="106" />
             </Grid.ColumnDefinitions>
-            <TextBlock Margin="52 0 0 0" Text="Name" FontSize="14" Grid.Column="0" Foreground="Gray"/>
-            <TextBlock Text="Tag" FontSize="14" Grid.Column="1" Foreground="Gray"/>
-            <TextBlock Text="Änderungsdatum" FontSize="14" Grid.Column="2" Foreground="Gray"/>
-            <TextBlock Text="Typ" FontSize="14" Grid.Column="3" Foreground="Gray"/>
+            <TextBlock Margin="52 0 0 0" Text="Name" FontSize="14" Grid.Column="0" Foreground="{ThemeResource SubTitleColor}"/>
+            <TextBlock Text="Tag" FontSize="14" Grid.Column="1" Foreground="{ThemeResource SubTitleColor}"/>
+            <TextBlock Text="Änderungsdatum" FontSize="14" Grid.Column="2" Foreground="{ThemeResource SubTitleColor}"/>
+            <TextBlock Text="Typ" FontSize="14" Grid.Column="3" Foreground="{ThemeResource SubTitleColor}"/>
         </Grid>
 
         <!-- ListView for BookmarkObjects -->
