--- a/Cyberduck/Cyberduck/Views/DatatransferPage/DatatransferPage.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/DatatransferPage.xaml
@@ -40,10 +40,10 @@
                 <ColumnDefinition Width="104" />
                 <ColumnDefinition Width="80" />
             </Grid.ColumnDefinitions>
-            <TextBlock Margin="52 0 0 0" Text="Name" FontSize="14" Grid.Column="0" Foreground="Gray"/>
-            <TextBlock Text="Änderungsdatum" FontSize="14" Grid.Column="1" Foreground="Gray"/>
-            <TextBlock Text="Dateigrösse" FontSize="14" Grid.Column="2" Foreground="Gray"/>
-            <TextBlock Text="Status" FontSize="14" Grid.Column="3" Foreground="Gray"/>
+            <TextBlock Margin="52 0 0 0" Text="Name" FontSize="14" Grid.Column="0" Foreground="{ThemeResource SubTitleColor}"/>
+            <TextBlock Text="Änderungsdatum" FontSize="14" Grid.Column="1" Foreground="{ThemeResource SubTitleColor}"/>
+            <TextBlock Text="Dateigrösse" FontSize="14" Grid.Column="2" Foreground="{ThemeResource SubTitleColor}"/>
+            <TextBlock Text="Status" FontSize="14" Grid.Column="3" Foreground="{ThemeResource SubTitleColor}"/>
         </Grid>
 
         <!-- ListView for DatatransferObjects -->
