--- a/Cyberduck/Cyberduck/Views/BookmarksPage/Components/BookmarkGroup.xaml
+++ b/Cyberduck/Cyberduck/Views/BookmarksPage/Components/BookmarkGroup.xaml
@@ -31,7 +31,7 @@
                 <!-- Connection Description -->
                 <StackPanel Grid.Column="1" VerticalAlignment="Center" MinWidth="200">
                     <TextBlock Text="{Binding Name}" FontSize="14" Margin="0 0 0 4" />
-                    <TextBlock FontSize="12" TextWrapping="NoWrap" Foreground="Gray">
+                    <TextBlock FontSize="12" TextWrapping="NoWrap" Foreground="{ThemeResource SubTitleColor}">
                         <Run Text="{Binding Items.Count}" />
                         <Run Text="Lesezeichen" />
                     </TextBlock>
