--- a/Cyberduck/Cyberduck/Views/BookmarksPage/Components/BookmarkGroupItem.xaml
+++ b/Cyberduck/Cyberduck/Views/BookmarksPage/Components/BookmarkGroupItem.xaml
@@ -3,7 +3,6 @@
     x:Class="Cyberduck.Views.BookmarksPage.Components.BookmarkGroupItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cyberduck.Views.BookmarksPage.Components"
     xmlns:local1="using:Cyberduck.Views.HistoryPage.Components"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -30,8 +29,8 @@
         <!-- Connection Description -->
         <StackPanel Grid.Column="1" VerticalAlignment="Center" MinWidth="200">
             <TextBlock Text="{Binding ConnectionName}" FontSize="14" TextWrapping="NoWrap" Margin="0 0 0 4" />
-            <TextBlock Text="{Binding ConnectionAdress}" FontSize="12" TextWrapping="NoWrap" Foreground="Gray" />
-            <TextBlock Text="{Binding Username}" FontSize="12" TextWrapping="NoWrap" Foreground="Gray" />
+            <TextBlock Text="{Binding ConnectionAdress}" FontSize="12" TextWrapping="NoWrap" Foreground="{ThemeResource SubTitleColor}" />
+            <TextBlock Text="{Binding Username}" FontSize="12" TextWrapping="NoWrap" Foreground="{ThemeResource SubTitleColor}" />
         </StackPanel>
 
         <!-- Tags -->
@@ -71,6 +70,6 @@
            <TextBlock Text="{Binding Type}" FontSize="14" TextWrapping="NoWrap" />
         </StackPanel>
 
-        <Border Grid.Row="1" Grid.ColumnSpan="5" BorderThickness="0,1,0,0" BorderBrush="LightGray" Margin="0,10,0,0"/>
+        <Border Grid.Row="1" Grid.ColumnSpan="5" BorderThickness="0,1,0,0" BorderBrush="{ThemeResource BorderColor}" Margin="0,10,0,0"/>
     </Grid>
 </UserControl>
