--- a/Cyberduck/Cyberduck/Views/HistoryPage/Components/HistoryItemTag.xaml
+++ b/Cyberduck/Cyberduck/Views/HistoryPage/Components/HistoryItemTag.xaml
@@ -5,7 +5,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="using:Cyberduck.Core.Models"
     mc:Ignorable="d">
 
     <Grid VerticalAlignment="Center" ColumnSpacing="-12">
@@ -22,7 +21,7 @@
                 </Grid.ColumnDefinitions>
 
                 <FontIcon Grid.Column="0" Glyph="&#xE8EC;" FontSize="14" Foreground="{Binding Color}"/>
-                <TextBlock Grid.Column="1" Text="{Binding Tagname}" FontSize="14" TextWrapping="NoWrap" Foreground="Gray" Padding="4" />
+                <TextBlock Grid.Column="1" Text="{Binding Tagname}" FontSize="14" TextWrapping="NoWrap" Foreground="{ThemeResource SubTitleColor}" Padding="4" />
             </Grid>
         </Border>
     </Grid>
