updated colors to match with dark / light theme

--- a/Cyberduck/Cyberduck/Views/BookmarksPage/Components/Bookmark.xaml
+++ b/Cyberduck/Cyberduck/Views/BookmarksPage/Components/Bookmark.xaml
@@ -3,7 +3,7 @@
     x:Class="Cyberduck.Views.BookmarksPage.Components.Bookmark"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cyberduck.Views.HistoryPage.Components"
+    xmlns:local="using:Cyberduck.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -57,7 +57,7 @@
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <local:HistoryItemTag Tag="{Binding}" />
+                        <local:Tag Tag="{Binding}" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
