--- a/Cyberduck/Cyberduck/Views/BookmarksPage/Components/BookmarkGroupItem.xaml
+++ b/Cyberduck/Cyberduck/Views/BookmarksPage/Components/BookmarkGroupItem.xaml
@@ -3,7 +3,7 @@
     x:Class="Cyberduck.Views.BookmarksPage.Components.BookmarkGroupItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local1="using:Cyberduck.Views.HistoryPage.Components"
+    xmlns:local1="using:Cyberduck.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -53,7 +53,7 @@
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <local1:HistoryItemTag Tag="{Binding}" />
+                        <local1:Tag Tag="{Binding}" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
