--- a/Cyberduck/Cyberduck/Views/HistoryPage/Components/HistoryItem.xaml
+++ b/Cyberduck/Cyberduck/Views/HistoryPage/Components/HistoryItem.xaml
@@ -2,7 +2,7 @@
     x:Class="Cyberduck.Views.HistoryPage.Components.HistoryItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cyberduck.Views.HistoryPage.Components"
+    xmlns:local="using:Cyberduck.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -54,7 +54,7 @@
                 </ListView.ItemContainerStyle>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <local:HistoryItemTag Tag="{Binding}" />
+                        <local:Tag Tag="{Binding}" />
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
