--- a/Cyberduck/Cyberduck/App.xaml
+++ b/Cyberduck/Cyberduck/App.xaml
@@ -14,10 +14,14 @@
                         <ResourceDictionary x:Key="Light">
                             <SolidColorBrush x:Key="SubTitleColor" Color="Gray" />
                             <SolidColorBrush x:Key="BorderColor" Color="LightGray" />
+                            <SolidColorBrush x:Key="AlternatingRowBackgroundTable" Color="#F4F4F4" />
+                            <SolidColorBrush x:Key="ScrollViewBorderBrush" Color="#F0F0F0" />
                         </ResourceDictionary>
                         <ResourceDictionary x:Key="Dark">
                             <SolidColorBrush x:Key="SubTitleColor" Color="LightGray" />
                             <SolidColorBrush x:Key="BorderColor" Color="Gray" />
+                            <SolidColorBrush x:Key="AlternatingRowBackgroundTable" Color="#1C1C1C " />
+                            <SolidColorBrush x:Key="ScrollViewBorderBrush" Color="#3A3A3A " />
                         </ResourceDictionary>
                     </ResourceDictionary.ThemeDictionaries>
                 </ResourceDictionary>
