--- a/Cyberduck/Cyberduck/Views/Dialogs/NewConnectionDialogContent.xaml
+++ b/Cyberduck/Cyberduck/Views/Dialogs/NewConnectionDialogContent.xaml
@@ -19,7 +19,7 @@
         <TextBox Header="Quick Connect" PlaceholderText="Gib die Serveradresse ein..." Margin="0,0,0,14"/>
         <TextBlock Text="Wähle eine Verbindung aus deinem Verlauf..." Margin="0,0,0,8"/>
 
-        <ScrollViewer Height="240" ZoomMode="Enabled" CornerRadius="8" BorderBrush="#f0f0f0" BorderThickness="1"
+        <ScrollViewer Height="240" ZoomMode="Disabled" CornerRadius="8" BorderBrush="{ThemeResource ScrollViewBorderBrush}" BorderThickness="1"
                       IsTabStop="True" IsVerticalScrollChainingEnabled="True"
                       HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Disabled"
                       VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto">
@@ -31,7 +31,7 @@
                                    ItemsSource="{Binding HistoryItems, Mode=OneWay}"
                                    IsReadOnly="True"
                                    HorizontalAlignment="Stretch"
-                                   AlternatingRowBackground="#F9F9F9"
+                                   AlternatingRowBackground="{ThemeResource AlternatingRowBackgroundTable}"
                                    RowHeight="40">
 
                     <controls:DataGrid.Columns>
