--- a/Cyberduck/Cyberduck/App.xaml
+++ b/Cyberduck/Cyberduck/App.xaml
@@ -16,12 +16,14 @@
                             <SolidColorBrush x:Key="BorderColor" Color="LightGray" />
                             <SolidColorBrush x:Key="AlternatingRowBackgroundTable" Color="#F4F4F4" />
                             <SolidColorBrush x:Key="ScrollViewBorderBrush" Color="#F0F0F0" />
+                            <SolidColorBrush x:Key="HeaderTableBackground" Color="White" />
                         </ResourceDictionary>
                         <ResourceDictionary x:Key="Dark">
                             <SolidColorBrush x:Key="SubTitleColor" Color="LightGray" />
                             <SolidColorBrush x:Key="BorderColor" Color="Gray" />
                             <SolidColorBrush x:Key="AlternatingRowBackgroundTable" Color="#1C1C1C " />
                             <SolidColorBrush x:Key="ScrollViewBorderBrush" Color="#3A3A3A " />
+                            <SolidColorBrush x:Key="HeaderTableBackground" Color="#3A3A3A " />
                         </ResourceDictionary>
                     </ResourceDictionary.ThemeDictionaries>
                 </ResourceDictionary>
