--- a/Cyberduck/Cyberduck/Views/DatatransferPage/Components/Datatransfer.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/Components/Datatransfer.xaml
@@ -2,16 +2,15 @@
     x:Class="Cyberduck.Views.DatatransferPage.Components.Datatransfer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cyberduck.Views.DatatransferPage.Components"
-    xmlns:local1="using:Cyberduck.Helpers"
+    xmlns:local="using:Cyberduck.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <UserControl.Resources>
-        <local1:DatatransferTypeToIconConverter x:Key="TypeToIconConverter" />
-        <local1:DatatransferStateToIconConverter x:Key="StateToIconConverter" />
-        <local1:StateToVisibilityConverter x:Key="StateToVisibilityConverter" />
+        <local:DatatransferTypeToIconConverter x:Key="TypeToIconConverter" />
+        <local:DatatransferStateToIconConverter x:Key="StateToIconConverter" />
+        <local:StateToVisibilityConverter x:Key="StateToVisibilityConverter" />
     </UserControl.Resources>
 
     <Grid
